--- a/src/options/main.css
+++ b/src/options/main.css
@@ -6,10 +6,12 @@
 @import "../styles/base.css";
 @import "../styles/components/buttons.css";
 @import "../styles/components/inputs.css";
+@import "../styles/components/dropdowns.css";
 @import "../styles/components/cards.css";
 @import "../styles/components/nav.css";
 @import "../styles/components/modals.css";
 @import "../styles/components/toasts.css";
+@import "../styles/components/tags.css";
 @import "../styles/components/utils.css";
 
 /* -------------------------------------------------------------------------- */
