--- a/src/popup/main.css
+++ b/src/popup/main.css
@@ -6,8 +6,10 @@
 @import "../styles/base.css";
 @import "../styles/components/buttons.css";
 @import "../styles/components/inputs.css";
+@import "../styles/components/dropdowns.css";
 @import "../styles/components/cards.css";
 @import "../styles/components/nav.css";
+@import "../styles/components/tags.css";
 @import "../styles/components/utils.css";
 
 /* -------------------------------------------------------------------------- */
