--- a/src/sidepanel/main.css
+++ b/src/sidepanel/main.css
@@ -6,8 +6,10 @@
 @import "../styles/base.css";
 @import "../styles/components/buttons.css";
 @import "../styles/components/inputs.css";
+@import "../styles/components/dropdowns.css";
 @import "../styles/components/cards.css";
 @import "../styles/components/nav.css";
+@import "../styles/components/tags.css";
 @import "../styles/components/utils.css";
 
 /* -------------------------------------------------------------------------- */
@@ -26,6 +28,7 @@ html, body {
   width: 100%;
   height: 100vh;
   background: var(--ui-bg-card);
+  color: var(--ui-text-primary);
   overflow: hidden;
   display: flex;
   flex-direction: column;
