--- a/src/popup/main.css
+++ b/src/popup/main.css
@@ -10,6 +10,7 @@
 @import "../styles/components/cards.css";
 @import "../styles/components/nav.css";
 @import "../styles/components/tags.css";
+@import "../styles/components/toasts.css";
 @import "../styles/components/utils.css";
 
 /* -------------------------------------------------------------------------- */
@@ -36,18 +37,6 @@ body {
   margin: 0 auto;
 }
 
-/* Global Toast Container */
-.ui-toast-container {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  margin-top: 1.5rem;
-  z-index: 9999;
-  pointer-events: none;
-}
 
 /* Header */
 .popup-header {
