--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -14,3 +14,22 @@ body {
 
 /* Reset Lists */
 ul { padding: 0; margin: 0; list-style: none; }
+
+/* -------------------------------------------------------------------------- */
+/* Global Scrollbar Patterns                                                 */
+/* -------------------------------------------------------------------------- */
+
+.custom-scrollbar::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
+}
+.custom-scrollbar::-webkit-scrollbar-track {
+  background: transparent;
+}
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background-color: var(--ui-border);
+  border-radius: 20px;
+}
+.custom-scrollbar:hover::-webkit-scrollbar-thumb {
+  background-color: var(--ui-text-secondary);
+}
