--- a/src/popup/main.css
+++ b/src/popup/main.css
@@ -128,7 +128,7 @@ body {
 }
 
 .profile-item.active {
-  /* background-color: rgba(var(--bs-primary-rgb), 0.1); */
+  background-color: rgba(var(--bs-primary-rgb), 0.1);
 }
 
 .profile-icon {
