--- a/src/styles/components/inputs.css
+++ b/src/styles/components/inputs.css
@@ -178,3 +178,26 @@ input[type='color'].border-0::-webkit-color-swatch {
   color: var(--ui-text-secondary);
   opacity: 0.5;
 }
+/* -------------------------------------------------------------------------- */
+/* Range Inputs (Bootstrap Overrides)                                         */
+/* -------------------------------------------------------------------------- */
+
+.form-range::-webkit-slider-thumb {
+  background-color: var(--bs-primary) !important;
+}
+
+.form-range::-moz-range-thumb {
+  background-color: var(--bs-primary) !important;
+}
+
+.form-range::-ms-thumb {
+  background-color: var(--bs-primary) !important;
+}
+
+.form-range:focus::-webkit-slider-thumb {
+  box-shadow: 0 0 0 0.25rem rgba(var(--bs-primary-rgb), 0.25) !important;
+}
+
+.form-range:active::-webkit-slider-thumb {
+  background-color: var(--bs-primary-hover) !important;
+}
